Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74510

qmlcodemarker.cpp:182:26: error: variable type 'QmlMarkupVisitor' is an abstract class

XMLWordPrintable

    • All
    • 11d01e3b74c84e465246a8f164b3f3b8ff92d8a4 (qt/qttools/5.12)

      https://codereview.qt-project.org/#/c/255515/ Update submodules on '5.12' in qt5 - PS3

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1552884230

      https://testresults.qt.io/logs/qt/qttools/763c1856aca22803092bdfe8649940fc37ec7cb8/MacOSMacOS_10_13x86_64IOSIOS_ANYmultiClangqtci-macos-10.13-x86_64-2-a70de4DebugAndRelease_DisableTests_Static/22f67f8b948f48266e8b5f7a1f5aa2f592ada81f/build_1552884486/log.txt.gz

      agent:2019/03/18 03:05:13 build.go:197: qmlcodemarker.cpp:182:26: error: variable type 'QmlMarkupVisitor' is an abstract class
      agent:2019/03/18 03:05:13 build.go:197:         QmlMarkupVisitor visitor(code, pragmas, &engine);
      agent:2019/03/18 03:05:13 build.go:197:                          ^
      agent:2019/03/18 03:05:13 build.go:197: /Users/qt/work/install/include/QtQml/5.12.2/QtQml/private/qqmljsastvisitor_p.h:404:18: note: unimplemented pure virtual method 'throwRecursionDepthError' in 'QmlMarkupVisitor'
      agent:2019/03/18 03:05:13 build.go:197:     virtual void throwRecursionDepthError() = 0;
      agent:2019/03/18 03:05:13 build.go:197:                  ^
      agent:2019/03/18 03:05:13 build.go:197: 1 error generated.
      

        For Gerrit Dashboard: QTBUG-74510
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes