Handle recursion depth errors when parsing JavaScript

Implementations of QQmlJS::AST::Visitor are required to do so.

Fixes: QTBUG-74510
Change-Id: I061240f15ce082a05dd7829d225a5bfc3edd896a
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>