src/qdoc/qmlcodeparser.cpp
@@ -192,6 +192,10 @@ void QmlCodeParser::parseSourceFile(const Location& location, const QString& fil
                               metacommandsAllowed,
                               topicCommandsAllowed);
         QQmlJS::AST::Node::accept(ast, &visitor);
+        if (visitor.hasError()) {
+            qDebug().nospace() << qPrintable(filePath) << ": Could not analyze QML file. "
+                               << "The output is incomplete.";
+        }
     }
     foreach (const  QQmlJS::DiagnosticMessage &msg, parser->diagnosticMessages()) {
         qDebug().nospace() << qPrintable(filePath) << ':' << msg.loc.startLine
